--- a/adams.html
+++ b/adams.html
@@ -90,7 +90,7 @@
     <div class="container">
         <h1>Capital Luxury Condominiumns</h1>
         <div class="property-image">
-            <img src="main\pool.jpg">
+            <img src="pool.jpg">
         </div>
         <div class="property-info">
             <div class="property-details">
